<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.distrubuted</groupId>
    <artifactId>stage5</artifactId>
    <version>1</version>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
<!--    <build>-->
<!--        <plugins>-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-surefire-plugin</artifactId>-->
<!--                <version>3.0.0-M5</version>-->
<!--                <configuration>-->
<!--                    <runOrder>alphabetical</runOrder>-->
<!--                    <forkCount>1</forkCount>-->
<!--                    <reuseForks>false</reuseForks>-->
<!--&lt;!&ndash;                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>&ndash;&gt;-->
<!--&lt;!&ndash;                    <systemPropertyVariables>&ndash;&gt;-->
<!--&lt;!&ndash;                        <databaseSchema>MY_TEST_SCHEMA_${surefire.forkNumber}</databaseSchema>&ndash;&gt;-->
<!--&lt;!&ndash;                    </systemPropertyVariables>&ndash;&gt;-->
<!--&lt;!&ndash;                    <workingDirectory>FORK_DIRECTORY_${surefire.forkNumber}</workingDirectory>&ndash;&gt;-->
<!--                </configuration>-->
<!--            </plugin>-->
<!--        </plugins>-->
<!--    </build>-->
</project>